--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,18 @@
 
 buildscript {
     
+    ext {
+        kotlin_version = '1.4.10'
+        compose_version = '1.0.0-alpha03'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
-        
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha11'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
